--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <p>This is paragraph</p>
     <h2>New importantinfo</h2>
     <p>Another paragraph</p>
+    <p>List of countries</p>
+    <ul>
+        <li>España</li>
+        <li>Francia</li>
+        <li>Italia</li>
+    </ul>
 </body>
 </html>
